src/components/FoodSection/FoodSection.module.scss
.wrapper {
  position: relative;
  width: 100%;
}

.sticky {
  position: sticky;
  top: 10rem;

  @media (max-width: 768px) {
    top: 5rem;
  }
}

.cards_section {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: rem(97px);
  flex-wrap: nowrap;
  padding-left: rem(165px);
  padding-right: rem(165px);
  height: calc(100vh - 16rem);
  width: max-content;
  will-change: transform;

  @media (max-width: 1024px) {
    gap: rem(60px);
    padding-left: rem(100px);
    padding-right: rem(100px);
    height: calc(100vh - 12rem);
  }

  @media (max-width: 768px) {
    gap: rem(40px);
    padding-left: rem(50px);
    padding-right: rem(50px);
    height: calc(100vh - 8rem);
  }
}

.cards_section_overflow {
  overflow: hidden;
  width: 100vw;
  margin-left: -2rem;

  @media (max-width: 768px) {
    width: calc(100vw + 2rem);
  }
}

.small_card {
  width: rem(523px);
  position: relative;
  padding: 76px 0px;
  overflow: hidden;
  height: rem(650px);
  max-height: rem(650px);
  flex-shrink: 0;

  @media (max-width: 1024px) {
    width: rem(400px);
    height: rem(500px);
    max-height: rem(500px);
    padding: 40px 0px;
  }

  @media (max-width: 768px) {
    width: rem(300px);
    height: rem(400px);
    max-height: rem(400px);
    padding: 30px 0px;
  }
}

.image_container {
  width: rem(397px);
  border-radius: 20px;
  overflow: hidden;
  transform: translateY(0%);
  transition: 0.4s ease-in-out 0.4s;
  margin: 0 auto;
  left: 0;
  right: 0;
  height: rem(397px);
  display: flex;
  align-items: flex-start;
  justify-content: center;

  @media (max-width: 1024px) {
    width: rem(300px);
    height: rem(300px);
  }

  @media (max-width: 768px) {
    width: rem(220px);
    height: rem(220px);
  }
}

.small_card_img {
  width: 110%;
  position: absolute;

  @media (max-width: 768px) {
    width: 120%;
  }
}

.small_card_title {
  margin-top: rem(38px);
  margin-left: rem(70px);
  font-weight: 900;
  line-height: 1.1;
  font-family: var(--Poppins);
  user-select: none;
  font-size: rem(38px);
  transform: translateY(0%);
  transition: 0.4s ease-in-out 0.4s;

  @media (max-width: 1024px) {
    margin-top: rem(24px);
    margin-left: rem(40px);
    font-size: rem(32px);
  }

  @media (max-width: 768px) {
    margin-top: rem(16px);
    margin-left: rem(24px);
    font-size: rem(24px);
  }
}

.food_list {
  position: absolute;
  margin-left: rem(70px);
  margin-right: rem(70px);
  top: 60%;
  opacity: 0;
  transition: 0.4s ease-in-out 0s;
  font-family: var(--Roboto);
  user-select: none;
  font-size: rem(24px);

  @media (max-width: 1024px) {
    margin-left: rem(40px);
    margin-right: rem(40px);
    font-size: rem(20px);
  }

  @media (max-width: 768px) {
    margin-left: rem(24px);
    margin-right: rem(24px);
    font-size: rem(16px);
  }
}

.centered {
  .image_container {
    transform: translateY(-30%);
    width: 100%;
    height: 60%;
    transition-delay: 0s;

    @media (max-width: 768px) {
      transform: translateY(-20%);
      height: 50%;
    }
  }

  .small_card_title {
    transform: translateY(-230%);
    transition-delay: 0s;

    @media (max-width: 768px) {
      transform: translateY(-180%);
    }
  }

  .food_list {
    opacity: 1;
    transition: 0.4s ease-in-out 0.4s;
  }
}

